# core-lite

./: CMakeLists.txt  README.md  README_CLANG.md
.github/workflows/: docker-weekly-scheduler.yml  docker-weekly.yml  linux-build.yml  release.yml
docker/orchestrator/: Dockerfile  cloud-init.md  cloud-init.yml  docker-compose.yml  dockerhub-readme.md
docker/orchestrator/app/: cleanup.py  config.py  epoch_service.py  local_snapshot_saver.py  main.py  management_api.py  models.py  node_client.py  process_manager.py  snapshot_cycle.py  state_manager.py  watchdog.py
docker/orchestrator/app/uploaders/: __init__.py  chunked_scp.py
docker/orchestrator/config/: default.yaml
docker/orchestrator/legacy/: docker-compose.yml
docker/orchestrator/tests/: test_management_api.py  test_snapshot_cycle.py  test_watchdog.py
lib/platform_efi/: uefi.h
src/: CMakeLists.txt  Qubic.vcxproj  four_q.h  private_settings.h  public_settings.h  qubic.cpp
src/K12/: kangaroo_twelve_xkcp.h
src/contract_core/: contract_exec.h  qpi_asset_impl.h  qpi_oracle_impl.h  qpi_proposal_voting.h
src/contracts/: QReservePool.h  QThirtyFour.h  Qdraw.h  qpi.h
src/extensions/: empty_private_settings.h  k12_engine.h  overload.h  userfaultfd.h  utils.h
src/extensions/http/: http.h
src/logging/: logging.h  net_msg_impl.h
src/mining/: mining.h
src/network_core/: peers.h
src/network_messages/: common_def.h  system_info.h
src/oracle_core/: net_msg_impl.h  oracle_engine.h  snapshot_files.h
src/platform/: concurrency.h  file_io.h  m256.h  uint128.h
src/spectrum/: special_entities.h  spectrum.h
src/ticking/: pending_txs_pool.h  tick_storage.h
test/: CMakeLists.txt  contract_testing.h  k12_engine.cpp  math_lib.cpp  oracle_engine.cpp  oracle_testing.h  qpi.cpp  qpi_date_time.cpp  test.vcxproj  test_util.h
